# cetlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README
cetlib/: .gitignore  BasicPluginFactory.cc  BasicPluginFactory.h  CMakeLists.txt  FileInPath.cc  FileInPath.h  HorizontalRule.h  LibraryManager.cc  LibraryManager.h  LibraryManager.notes  LibraryManager.notes.html  MD5Digest.cc  MD5Digest.h  Ntuple.h  PluginDefs.h  PluginFactory.cc  PluginFactory.h  PluginTypeDeducer.h  ProvideFilePathMacro.h  ProvideMakePluginMacros.h  SimultaneousFunctionSpawner.h  _polarssl_sha1.cc  assert_only_one_thread.h  base_converter.cc  base_converter.h  bit_manipulation.h  canonical_number.cc  canonical_number.h  canonical_string.cc  canonical_string.h  cet-bootstrap.cc  cetconfig.h.in  cms_FileInPath.cc  cms_FileInPath.h  cms_value_ptr.h  coded_exception.h  column_width.cc  column_width.h  compiler_macros.h  container_algorithms.h  (+87 more)
cetlib/Ntuple/: .gitignore  Exception.cc  Exception.h  Ntuple.h  Ntuple.notes  Transaction.cc  Transaction.h  sqlite_DBmanager.h  sqlite_helpers.cc  sqlite_helpers.h  sqlite_insert_impl.h  sqlite_query_impl.cc  sqlite_query_impl.h  sqlite_result.cc  sqlite_result.h  sqlite_stringstream.h
cetlib/config/: test-cbegin.cc
cetlib/detail/: metaprogramming.h  ostream_handle_impl.cc  ostream_handle_impl.h  plugin_search_path.cc  plugin_search_path.h  polarssl_sha1.cc  provide_file_path.cc  provide_file_path.h  wrapLibraryManagerException.cc  wrapLibraryManagerException.h
cetlib/doc/: LibraryManager.notes  ostream_handle.notes
cetlib/sqlite/: CMakeLists.txt  Connection.cc  Connection.h  ConnectionFactory.cc  ConnectionFactory.h  DBmanager.h  Exception.cc  Exception.h  Ntuple.h  Transaction.cc  Transaction.h  bind_parameters.h  column.h  create_table.h  exec.cc  exec.h  helpers.cc  helpers.h  insert.h  query_result.cc  query_result.h  select.cc  select.h  statistics.cc  statistics.h  stringstream.h
cetlib/sqlite/detail/: DefaultDatabaseOpenPolicy.cc  DefaultDatabaseOpenPolicy.h  bind_parameters.cc  bind_parameters.h  column_constraint.h  convert.h  extract.h  get_result.h  normalize_statement.cc  normalize_statement.h
cetlib/test/: CMakeLists.txt  CRC32Calculator.cc  CRC32Calculator.h  LibraryManagerTestFunc.cc.in  LibraryManagerTestFunc.h  LibraryManager_t.cc  MD5Digest_test.cc  PluginFactory_t.cc  TestPluginBase.h  TestPlugin_plugin.cc  assert_only_one_thread_test.cc  bit_test.cc  canonical_number_test.cc  canonical_string_test.cc  coded_exception_test.cc  column_width_test.cc  container_algs_test.cc  cpu_timer_test.cc  crc32_test.cc  demangle_t.cc  exception_category_matcher_t.cc  exception_collector_test.cc  exception_message_matcher_t.cc  exception_test.cc  exempt_ptr_test.cc  filepath_maker_test.cc  filesystem_test.cc  getenv_test.cc  hypot_test.cc  include_test.cc  includer_test.cc  is_absolute_filepath_t.cc  lpad_test.cc  map_vector_test.cc  maybe_ref_test.cc  name_of_test.cc  no_delete_t.cc  ntos_test.cc  ntuple_t.cc  nybbler_test.cc  (+32 more)
cetlib/test/Ntuple/: CMakeLists.txt  ntuple_t.cc  sqlite_stringstream_t.cc
cetlib/test/sqlite/: CMakeLists.txt  connection_t.cc  create_table_ddl_t.cc  insert_t.cc  normalize_statement_t.cc  ntuple_t.cc  query_result_t.cc  statistics_t.cc  stringstream_t.cc  transaction_t.cc
cmakeConfig/: CMakeLists.txt  cetlib-fragment.cmake.in
config/: CMakeLists.txt  cetlib-augment-CETLIB.cmake  mailinglist.cfg
doc/: .buildinfo  fip180-1.htm  genindex.html  index.html  objects.inv  releaseNotes.html  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree  releaseNotes.doctree
doc/_static/: documentation_options.js
docs/: CMakeLists.txt  FindSphinx.cmake.hide  conf.py.in  depends.rst  index.rst  release-notes  releaseNotes.rst  series_temp.rst  suite_temp.rst  temp.rst
docs/_extensions/: redmineRoles.py
docs/_templates/: layout.html
docs/series_notes/: general_description.rst
perllib/: CMakeLists.txt  PluginVersionInfo.pm.in  cetskel  cetskelgen
perllib/CetSkel/: BasicPluginCommon.pm  CMakeLists.txt
perllib/CetSkel/cetskel/: CMakeLists.txt  VersionInfo.pm.in
perllib/CetSkel/cetskelgen/: CMakeLists.txt  VersionInfo.pm.in
polarssl/: CMakeLists.txt  md5.cc  md5.h  sha1.cc  sha1.h  version.h
test/: CMakeLists.txt  CRC32Calculator.cc  Digest.cc  Digest.h  LibraryManagerTestFunc.cc.in  LibraryManagerTestFunc.h  LibraryManager_t.cc  LibraryManager_t.sh.in  PluginFactory_t.cc  TestPluginBase.cc  TestPluginBase.h  TestPlugin_plugin.cc  base_converter_test.cc  bit_test.cc  canonical_number_test.cc  canonical_string_test.cc  coded_exception_test.cc  column_width_test.cc  container_algs_test.cc  cpu_timer_test.cc  crc32_test.cc  demangle_t.cc  exception_collector_test.cc  exception_test.cc  exempt_ptr_test.cc  find_matching_files_test.cc  find_matching_files_test.sh  getenv_test.cc  hypot_test.cc  inc-expand_test.sh  include_test.cc  includer_test.cc  is_absolute_filepath_t.cc  lpad_test.cc  make_unique_t.cc  map_vector_test.cc  maybe_ref_test.cc  md5.cc  md5_test.cc  moduleType.cc  (+33 more)
ups/: CMakeLists.txt  cetlib-config.cmake.in  cetlib-fragment.cmake.in  cetlib.table.in  cetlib.version.in  product-config.cmake.in  product_deps  product_deps.bak  product_list  setup_for_development
